<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <EditText
        android:id="@+id/et_cantidad_polos"
        android:layout_width="306dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="48dp"
        android:layout_marginStart="48dp"
        android:ems="10"
        android:hint="@string/et_cantidad_polos"
        android:inputType="number"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/et_nombre_empresa" />

    <Switch
        android:id="@+id/switch_servicion_transporte"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="132dp"
        android:layout_marginStart="132dp"
        android:layout_marginTop="140dp"
        android:text="@string/switch_servicion_transporte"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_resultado"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="36dp"
        android:layout_marginStart="36dp"
        android:layout_marginTop="172dp"
        android:text="@string/tv_resultado"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button" />

    <RadioGroup
        android:id="@+id/radioGroup"
        android:layout_width="154dp"
        android:layout_height="86dp"
        android:layout_marginLeft="16dp"
        android:layout_marginStart="16dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/et_cantidad_polos">

        <RadioButton
            android:id="@+id/rb_tarjeta_Credito"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/rb_tarjeta_Credito" />

        <RadioButton
            android:id="@+id/rb_efectivo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/rb_efectivo" />
    </RadioGroup>

    <Spinner
        android:id="@+id/spinner_talla_polo"
        android:layout_width="331dp"
        android:layout_height="52dp"
        android:layout_marginLeft="24dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="24dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/switch_servicion_transporte" />

    <CheckBox
        android:id="@+id/check_fin_semana"
        android:layout_width="wrap_content"
        android:layout_height="29dp"
        android:layout_marginLeft="228dp"
        android:layout_marginStart="228dp"
        android:layout_marginTop="92dp"
        android:text="@string/check_fin_semana"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/button"
        android:layout_width="154dp"
        android:layout_height="56dp"
        android:layout_marginLeft="36dp"
        android:layout_marginStart="36dp"
        android:layout_marginTop="244dp"
        android:drawableEnd="@mipmap/polo3"
        android:drawableRight="@mipmap/polo3"
        android:onClick="calcularVR"
        android:text="@string/btn_calcular"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/et_nombre_empresa"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="68dp"
        android:layout_marginStart="68dp"
        android:ems="10"
        android:hint="@string/et_nombre_empresa"
        android:inputType="textPersonName"
        android:textColor="@color/colorPrimary"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/button2"
        android:layout_width="127dp"
        android:layout_height="58dp"
        android:layout_marginEnd="48dp"
        android:layout_marginRight="48dp"
        android:layout_marginTop="348dp"
        android:onClick="verImagenes"
        android:text="@string/btn_Siguiente_Activity"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/button4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="36dp"
        android:layout_marginEnd="72dp"
        android:layout_marginRight="72dp"
        android:onClick="IrGson"
        android:text="@string/btn_Gson"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

</android.support.constraint.ConstraintLayout>